# portfolio-server

./: .gitignore  Cargo.toml  README.md
cmd/: Cargo.toml
cmd/src/: main.rs
config/: Cargo.toml
config/src/: lib.rs
di/: Cargo.toml
di/src/: lib.rs
domain/: Cargo.toml
domain/src/model/: article.rs  auth.rs
domain/src/repository/: article.rs  auth.rs
infra/: Cargo.toml
infra/src/repository/: article.rs  auth.rs
interface/: Cargo.toml
interface/src/: api_error.rs  auth.rs  handler.rs  lib.rs
interface/src/handler/: check_authorization.rs  check_health.rs  delete_article.rs  list_article.rs  login_as_owner.rs  post_article.rs  read_article.rs  update_article.rs
swagger/: OpenApi.yml
usecase/: Cargo.toml
usecase/src/: article.rs  auth.rs
usecase/src/article/: delete_article.rs  list_article.rs  post_article.rs  read_article.rs  update_article.rs
usecase/src/auth/: check_ownership.rs  login_as_owner.rs
