[package]
name = "cmd"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.3"
interface = {path = "../interface"}
di = {path = "../di"}
config = {path = "../config"}