[package]
name = "di"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infra = {path = "../infra"}
usecase = {path = "../usecase"}
config = {path = "../config"}
firestore = "0.18"