[package]
name = "interface"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
hyper = { version = "0.14.23", features = ["full"] }
di = {path = "../di"}
usecase = {path = "../usecase"}
serde = "1.0"
serde_json = "1.0"